k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aerolink-auth-service
  labels:
    app: aerolink-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aerolink-auth
  template:
    metadata:
      labels:
        app: aerolink-auth
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: aerolink-auth
      containers:
        - name: auth-service
          image: 012549289252.dkr.ecr.us-east-1.amazonaws.com/aerolink-auth-service-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: aerolink-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
