k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aerolink-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Ensures the Load Balancer listens on port 80 (HTTP)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # AWS ELB Health Check Fix (Our services return 404 for the root '/' path)
    alb.ingress.kubernetes.io/success-codes: '200-404'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/docs
            pathType: Prefix
            backend:
              service:
                name: docs-service
                port:
                  number: 80
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/flights
            pathType: Prefix
            backend:
              service:
                name: flight-service
                port:
                  number: 80
          - path: /api/v1/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 80
          - path: /api/v1/baggage
            pathType: Prefix
            backend:
              service:
                name: baggage-service
                port:
                  number: 80
          # The React frontend catches all other traffic
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
